--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.10.1",
+    "framer-motion": "^11.5.6",
     "geist": "^1.3.0",
-    "next": "^14.2.4",
+    "next": "^14.2.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
